k8s/dvr/overlays/ytdl/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metube
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: metube
              mountPath: /downloads/.metube
            - name: dlcache
              mountPath: /dlcache
      volumes:
        - name: metube
          emptyDir: {}
        - name: dlcache
          emptyDir: {}
