k8s/dvr/overlays/ytdl/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 17442
      protocol: TCP
      targetPort: http
