k8s/dvr/overlays/ytdl/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - ytdl.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: ytdl.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ytdl-service
                port:
                  name: http
